# event-shapes

./: .gitignore  CMakeLists.atlas  CMakeLists.cxx  CMakeLists.txt  CMakeLists.txt.python  LICENSE  README.md  pyproject.toml
EventShapes/: EventShapes.h  EventShapesDict.h  selection.xml
Root/: EventShapes.cxx  LinkDef.h  Thrust.cxx
cmake/: atlas.cmake  cxx.cmake
python/: .gitignore  CMakeLists.txt  c_event_shapes.pxd  event_shapes.pyx  setup.py.in
tests/: benchmark_plots.py  main.cxx
